* Adding JaCoCo to enforce code coverage. * Separating Spring Boot classes from main code.