@@ -6,8 +6,8 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Objects;
@@ -22,7 +22,7 @@ public class UrlListLoaderImpl implements UrlListLoader {
     private static final Logger logger = LoggerFactory.getLogger( UrlListLoaderImpl.class );
 
     @Override
-    public Set<URL> loadURLsFromTextFile( String path ) throws IOException {
+    public Set<URI> loadURLsFromTextFile( String path ) throws IOException {
         Path actualPath = CommonUtils.testPathReadability( path );
 
         return Files.readAllLines( actualPath ).stream()
@@ -31,12 +31,12 @@ public class UrlListLoaderImpl implements UrlListLoader {
                 .collect( Collectors.toSet() );
     }
 
-    private URL createURL( String urlText ) {
-        URL url = null;
+    private URI createURL( String urlText ) {
+        URI url = null;
 
         try {
-            url = new URL( urlText );
-        } catch ( MalformedURLException exception ) {
+            url = new URI( urlText );
+        } catch ( URISyntaxException exception ) {
             logger.error( exception.getLocalizedMessage() );
         }
 
